--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,9 @@
                     <a href="/" class="text-gray-700 hover:text-blue-600 transition duration-300 font-medium {% if request.path == '/' %}text-blue-600{% endif %}">
                         Home
                     </a>
+                    <a href="/hello" class="text-gray-700 hover:text-blue-600 transition duration-300 font-medium {% if request.path == '/hello' %}text-blue-600{% endif %}">
+                        Hello
+                    </a>
                     <a href="/scripts" class="text-gray-700 hover:text-blue-600 transition duration-300 font-medium {% if request.path == '/scripts' %}text-blue-600{% endif %}">
                         Scripts
                     </a>
@@ -48,6 +51,9 @@
                 <div class="flex flex-col space-y-3">
                     <a href="/" class="text-gray-700 hover:text-blue-600 transition duration-300 font-medium {% if request.path == '/' %}text-blue-600{% endif %}">
                         Home
+                    </a>
+                    <a href="/hello" class="text-gray-700 hover:text-blue-600 transition duration-300 font-medium {% if request.path == '/hello' %}text-blue-600{% endif %}">
+                        Hello
                     </a>
                     <a href="/scripts" class="text-gray-700 hover:text-blue-600 transition duration-300 font-medium {% if request.path == '/scripts' %}text-blue-600{% endif %}">
                         Scripts
@@ -85,6 +91,7 @@
                     <h4 class="text-lg font-semibold mb-4">Quick Links</h4>
                     <ul class="space-y-2">
                         <li><a href="/" class="text-gray-400 hover:text-white transition duration-300">Home</a></li>
+                        <li><a href="/hello" class="text-gray-400 hover:text-white transition duration-300">Hello</a></li>
                         <li><a href="/scripts" class="text-gray-400 hover:text-white transition duration-300">Scripts</a></li>
                         <li><a href="/about" class="text-gray-400 hover:text-white transition duration-300">About</a></li>
                         <li><a href="/contact" class="text-gray-400 hover:text-white transition duration-300">Contact</a></li>
